# printcolumn

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py
printcolumn/: __init__.py  colors.py  column_printer.py  core.py
