[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["printcolumn"]

[project]
name = "printcolumn"
version = "0.11"
dependencies = ["printpop>=0.2.0"]
requires-python = ">=3.8"

authors = [
  {name = "Ryan LaPine", email = "github.stunt845@passinbox.com"}
]
maintainers = [
  {name = "Ryan LaPine", email = "github.stunt845@passinbox.com"}
]

description = "A Python utility for printing styled, aligned columns to the console."
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE.*"]

keywords = [
  "console output", "terminal formatting", "text wrapping", "column printer",
  "styled text", "CLI display", "ANSI formatting", "Python utility",
  "print formatting", "colorized output", "bold italic text", "tabular display",
  "pretty print", "text alignment", "debug output", "logging enhancement",
  "visual console", "developer tools", "readable logs", "Python CLI"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/rlapine/PrintColumn"
Documentation = "https://github.com/rlapine/PrintColumn#readme"
Repository = "https://github.com/rlapine/PrintColumn"

[project.scripts]
printcolumn = "printcolumn.core:main"