[metadata]
name = PrintColumn
version = 0.1.1
description = A Python utility for printing styled, aligned columns to the console.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ryan LaPine
author_email = github.stunt845@passinbox.com
license = MIT
url = https://github.com/rlapine/ColumnPrint
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
install_requires =
    printpop>=0.2.0
python_requires = >=3.7


[options.entry_points]
console_scripts =
    printcolumn = printcolumn.core:main

[options.package_data]
* = README.md

[build-system]
requires = ["setuptools>=42"]
build-backend = setuptools.build_meta